--- a/src/package.json
+++ b/src/package.json
@@ -6,14 +6,20 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "babel-cli": "^6.26.0",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
+    "curl": "^0.1.4",
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "jade": "~1.11.0",
     "mongodb": "^2.2.31",
     "monk": "^6.0.4",
     "morgan": "~1.8.1",
+    "nodemailer": "^4.1.0",
     "serve-favicon": "~2.4.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0"
   }
 }
